Issue #3168479 by tmakiel: Fix spacing in text paragraph

--- a/themes/custom/droopler_theme/scss/components/_d_p_text_paged.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_p_text_paged.scss
@@ -47,11 +47,15 @@ $d-p-text-paged-first-margin-top: 2% !default;
   }
   .field--type-link {
     text-align: center;
+    margin-top: 1rem;
   }
   .field--name-field-d-long-text {
     p {
       word-wrap: break-word;
       hyphens: auto;
+    }
+    p:last-of-type {
+      margin-bottom: 0;
     }
 
     &::before {
